feat: show content details (synopsis, rating, genre, duration) before playing
After selecting a search result, fetch and display the content's detail page
with synopsis, rating, duration, genre, and season/episode counts. User can
confirm or go back to pick a different result.

Also enriches the fzf search list with duration (movies) and season/episode
counts (TV shows) parsed from search result metadata. Updates test fixtures
to match actual FlixHQ HTML structure (fdi-item class on metadata spans).

--- a/internal/provider/testdata/home_trending.html
+++ b/internal/provider/testdata/home_trending.html
@@ -6,8 +6,10 @@
           <a href="/movie/free-dune-part-two-hd-98765" title="Dune: Part Two">Dune: Part Two</a>
         </div>
         <div class="fd-infor">
-          <span>2024</span>
-          <span>Movie</span>
+          <span class="fdi-item">2024</span>
+          <span class="dot"></span>
+          <span class="fdi-item fdi-duration">166m</span>
+          <span class="float-right fdi-type">Movie</span>
         </div>
       </div>
       <div class="flw-item">
@@ -15,8 +17,10 @@
           <a href="/movie/free-oppenheimer-hd-87654" title="Oppenheimer">Oppenheimer</a>
         </div>
         <div class="fd-infor">
-          <span>2023</span>
-          <span>Movie</span>
+          <span class="fdi-item">2023</span>
+          <span class="dot"></span>
+          <span class="fdi-item fdi-duration">180m</span>
+          <span class="float-right fdi-type">Movie</span>
         </div>
       </div>
     </div>
@@ -30,8 +34,10 @@
           <a href="/tv/watch-the-last-of-us-hd-54321" title="The Last of Us">The Last of Us</a>
         </div>
         <div class="fd-infor">
-          <span>2023</span>
-          <span>TV</span>
+          <span class="fdi-item">SS 2</span>
+          <span class="dot"></span>
+          <span class="fdi-item">EPS 12</span>
+          <span class="float-right fdi-type">TV</span>
         </div>
       </div>
       <div class="flw-item">
@@ -39,8 +45,10 @@
           <a href="/tv/watch-shogun-hd-43210" title="Shogun">Shogun</a>
         </div>
         <div class="fd-infor">
-          <span>2024</span>
-          <span>TV</span>
+          <span class="fdi-item">SS 1</span>
+          <span class="dot"></span>
+          <span class="fdi-item">EPS 10</span>
+          <span class="float-right fdi-type">TV</span>
         </div>
       </div>
     </div>
