--- a/internal/provider/testdata/search_results.html
+++ b/internal/provider/testdata/search_results.html
@@ -4,8 +4,10 @@
       <a href="/movie/free-the-exorcist-hd-75043" title="The Exorcist">The Exorcist</a>
     </div>
     <div class="fd-infor">
-      <span>1973</span>
-      <span>Movie</span>
+      <span class="fdi-item">1973</span>
+      <span class="dot"></span>
+      <span class="fdi-item fdi-duration">122m</span>
+      <span class="float-right fdi-type">Movie</span>
     </div>
   </div>
   <div class="flw-item">
@@ -13,8 +15,10 @@
       <a href="/tv/watch-breaking-bad-39516" title="Breaking Bad">Breaking Bad</a>
     </div>
     <div class="fd-infor">
-      <span>2008</span>
-      <span>TV</span>
+      <span class="fdi-item">SS 5</span>
+      <span class="dot"></span>
+      <span class="fdi-item">EPS 62</span>
+      <span class="float-right fdi-type">TV</span>
     </div>
   </div>
   <div class="flw-item">
@@ -22,8 +26,10 @@
       <a href="/movie/free-inception-hd-12345" title="Inception">Inception</a>
     </div>
     <div class="fd-infor">
-      <span>2010</span>
-      <span>Movie</span>
+      <span class="fdi-item">2010</span>
+      <span class="dot"></span>
+      <span class="fdi-item fdi-duration">148m</span>
+      <span class="float-right fdi-type">Movie</span>
     </div>
   </div>
 </div>
